NetBSD Problem Report #41861

From www@NetBSD.org  Sun Aug  9 10:59:46 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id ACEA163C270
	for <gnats-bugs@gnats.netbsd.org>; Sun,  9 Aug 2009 10:59:46 +0000 (UTC)
Message-Id: <20090809105936.69C6563C277@www.NetBSD.org>
Date: Sun,  9 Aug 2009 10:59:36 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing  device_xname in FE_DEBUG.
X-Send-Pr-Version: www-1.0

>Number:         41861
>Category:       kern
>Synopsis:       Missing  device_xname in FE_DEBUG.
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Aug 09 11:00:01 +0000 2009
>Closed-Date:    Sat Sep 12 21:14:08 +0000 2009
>Last-Modified:  Sat Sep 12 21:14:08 +0000 2009
>Originator:     Henning Petersen
>Release:        current-NetBSD
>Organization:
>Environment:
>Description:
Missing  device_xname in FE_DEBUG.
>How-To-Repeat:

>Fix:
diff -u -r1.73 mb86960.c
--- sys/dev/ic/mb86960.c	12 May 2009 14:25:17 -0000	1.73
+++ sys/dev/ic/mb86960.c	9 Aug 2009 07:25:45 -0000
@@ -417,7 +417,7 @@
 		(*sc->stop_card)(sc);

 #if FE_DEBUG >= 3
-	log(LOG_INFO, "%s: end of mb86960_stop()\n", sc->sc_dev));
+	log(LOG_INFO, "%s: end of mb86960_stop()\n", device_xname(sc->sc_dev));
 	mb86960_dump(LOG_INFO, sc);
 #endif
 }

>Release-Note:

>Audit-Trail:
From: Izumi Tsutsui <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41861 CVS commit: src/sys/dev/ic
Date: Sat, 12 Sep 2009 19:55:29 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Sat Sep 12 19:55:29 UTC 2009

 Modified Files:
 	src/sys/dev/ic: mb86960.c

 Log Message:
 Fix an incomplete device_xname change in rev 1.69. PR kern/41861


 To generate a diff of this commit:
 cvs rdiff -u -r1.73 -r1.74 src/sys/dev/ic/mb86960.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sun, 13 Sep 2009 06:14:08 +0900
State-Changed-Why:
fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.