Fix an incomplete device_xname change in rev 1.69. PR kern/41861